tests/test_assets/semantic/invalid/strings/bare_literal.cog
// semantic error at line 2: string literal requires an expected byte array type
// 1 semantic error generated.

test::() -> void {
    "hello";
}