tests/test_assets/semantic/invalid/strings/bare_literal.expected
semantic error at line 5: string literal requires an expected byte array type
1 semantic error generated.
